--- a/style/styling.css
+++ b/style/styling.css
@@ -8,16 +8,17 @@ img#logo {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 550px;
     height: 125px;
 }
 
-form {
+#form {
     width: 150px;
     color: white;
     position: relative;
     margin: 0 auto;
     margin-bottom: 50px;
+    border: none;
 }
 
 #SpeelVeld {
@@ -31,6 +32,8 @@ form {
 }
 
 div {
+    font-size: 25px;
+    font-weight: 400;
     text-align: center;
     padding: 0;
     margin: 0;
